# pytest-is-running

./: .gitignore  CHANGELOG.rst  HISTORY.rst  MANIFEST.in  README.rst  pyproject.toml  setup.cfg  tox.ini
requirements/: py37.txt  py38.txt
src/pytest_is_running/: __init__.py  plugin.py
tests/: test_pytest_is_running.py
