[metadata]
name = pytest-is-running
version = 1.1.0
description = pytest plugin providing a function to check if pytest is running.
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Adam Johnson
author_email = me@adamj.eu
url = https://github.com/adamchainz/pytest-is-running
project_urls =
    Changelog = https://github.com/adamchainz/pytest-is-running/blob/main/HISTORY.rst
    Twitter = https://twitter.com/adamchainz
license = MIT
keywords = pytest
classifiers =
    Development Status :: 5 - Production/Stable
    Framework :: Pytest
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
license_file = LICENSE

[options]
package_dir=
    =src
packages = find:
include_package_data = True
install_requires =
    pytest
python_requires = >=3.7
zip_safe = False

[options.packages.find]
where = src

[options.entry_points]
pytest11 =
    is_running = pytest_is_running.plugin

[coverage:run]
branch = True
disable_warnings = no-data-collected  # coverage only in subprocesses
parallel = True
source = pytest_is_running

[coverage:paths]
source =
   src/
   .tox/*/site-packages

[coverage:report]
show_missing = True

[flake8]
max-line-length = 88
extend-ignore = E203
