[metadata]
name = pytest_is_running
version = 1.3.0
description = pytest plugin providing a function to check if pytest is running.
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/adamchainz/pytest-is-running
author = Adam Johnson
author_email = me@adamj.eu
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Framework :: Pytest
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Typing :: Typed
keywords = pytest
project_urls =
    Changelog = https://github.com/adamchainz/pytest-is-running/blob/main/HISTORY.rst
    Twitter = https://twitter.com/adamchainz

[options]
packages = find:
python_requires = >=3.7
include_package_data = True
package_dir =
    =src
zip_safe = False

[options.packages.find]
where = src

[options.entry_points]
pytest11 =
    is_running = pytest_is_running.plugin

[coverage:run]
branch = True
disable_warnings = no-data-collected  # coverage only in subprocesses
parallel = True
source =
    pytest_is_running
    tests

[coverage:paths]
source =
    src/
    .tox/**/site-packages

[coverage:report]
show_missing = True

[flake8]
max-line-length = 88
extend-ignore = E203
